# interactive-ordination

./: .gitignore  README.md  distance.js  fileReader.js  index.html  ordination.js  plot.js  script.js  style.css  wasm-loader.js
.github/workflows/: deploy.yml
libs/: ml-pca.min.js  numeric.min.js
wasm/: Cargo.toml
wasm/src/: lib.rs
